styling the menu/navbar as well as linking the menu.ejs to index.ejs

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,8 +1,8 @@
 <header class="header">
   <nav class="navbar">
-    <a href="/mammals">Mammals</a>
-    <a href="/reptiles">Reptiles</a>
-    <a href="/birds">Birds</a>
-    <a href="/about">About Us</a>
+    <a class="animal_list" href="/mammals">Mammals</a>
+    <a class="animal_list" href="/reptiles">Reptiles</a>
+    <a class="animal_list" href="/birds">Birds</a>
+    <a class="animal_list" href="/about">About Us</a>
   </nav>
 </header>
