--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-</head>
-
+<%- include("../partials/header.ejs")%>
+ <%- include("../partials/menu.ejs")%>
 <body>
   <nav class="nav">
     <button class="nav-button">
