--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header.ejs")%>
+<%- include("../partials/head.ejs")%>
  <%- include("../partials/menu.ejs")%>
 <body>
   <nav class="nav">
