--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,5 +6,6 @@
     <title>Zoo Express</title>
     <link rel="stylesheet" href="/styles/styles.css" />
     <script src="/zooExpress/index.js" defer></script>
+    <link rel="stylesheet" href="https://use.typekit.net/bju8pmn.css" />
   </head>
 </html>
