Changed naming on classes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
-      <div class="footer-copyright">&copy; Zoo Express</div>
-      <div class="footer-wrapper">
+      <div class="footer_copyright">&copy; Zoo Express</div>
+      <div class="footer_wrapper">
         <div>
           <a href="https://facebook.com">
             <img
