Added png files for images

--- a/views/pages/animal-page.ejs
+++ b/views/pages/animal-page.ejs
@@ -12,6 +12,7 @@
     <% if (pageType==="animals" ) { %>
       <%- include('../partials/animals') %>
         <% }} %>
+        <%- include('../partials/footer')  %>
 </body>
 
 </html>
