--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-</head>
-
-<body>
-  <nav class="nav">
-    <button class="nav-button">
-      <a class="nav-item" href="/reptiles">Reptiles</a>
-    </button>
-    <button class="nav-button">
-      <a class="nav-item" href="/mammals">Mammals</a>
-    </button>
-    <button class="nav-button">
-      <a class="nav-item" href="/birds">Birds</a>
-    </button>
-  </nav>
-</body>
-
+  <body>
+    <nav class="nav">
+      <button class="nav-button">
+        <a class="nav-item" href="/reptiles">Reptiles</a>
+      </button>
+      <button class="nav-button">
+        <a class="nav-item" href="/mammals">Mammals</a>
+      </button>
+      <button class="nav-button">
+        <a class="nav-item" href="/birds">Birds</a>
+      </button>
+    </nav>
+    <%- include('../partials/footer') %>
+  </body>
 </html>
