Changed location for images

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
         <div>
           <a href="https://facebook.com">
             <img
-              src="./logos/facebook_logo.png"
+              src="/zooExpress/public/images/facebook_logo.png"
               alt="Facebook logo"
               width="50px"
               height="auto"
@@ -14,7 +14,7 @@
         <div>
           <a href="https://linkedin.com">
             <img
-              src="./logos/linkedin_logo.png"
+              src="/zooExpress/public/images/linkedin_logo.png"
               alt="Linkedin logo"
               width="50px"
               height="auto"
@@ -24,7 +24,7 @@
         <div>
           <a href="https://www.tiktok.com">
             <img
-              src="./logos/tiktok_logo.png"
+              src="/zooExpress/public/images/tiktok_logo.png"
               alt="Tiktok logo"
               width="50px"
               height="auto"
@@ -34,7 +34,7 @@
         <div>
           <a href="https://www.instagram.com">
             <img
-              src="./logos/instagram_logo.png"
+              src="/zooExpress/public/images/instagram_logo.png"
               alt="Instagram logo"
               width="50px"
               height="auto"
@@ -44,7 +44,7 @@
         <div>
           <a href="https://x.com">
             <img
-              src="./logos/x_logo.png"
+              src="/zooExpress/public/images/x_logo.png"
               alt="X logo"
               width="50px"
               height="auto"
