--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,4 +1,11 @@
 <header class="header">
+  <a href="/" class="logo">
+    <img
+      src="/images/zooexpress-icon.png"
+      alt="Zoo Express Home"
+      loading="lazy"
+    />
+  </a>
   <nav class="navbar">
     <a class="animal_list" href="/mammals">Mammals</a>
     <a class="animal_list" href="/reptiles">Reptiles</a>
