--- a/views/partials/animals.ejs
+++ b/views/partials/animals.ejs
@@ -7,19 +7,19 @@
         <img class="animal_image" src=/images/<%=animal.image %> alt="animal" height="200px" width="200px" />
         <div class="animal_box">
           <p class="animal_information">
-            <%= animal.lifespan %>
+            Lifespan: <%= animal.lifespan %>
           </p>
           <p class="animal_information">
-            <%= animal.length %>
+            Lenght: <%= animal.length %>
           </p>
           <p class="animal_information">
-            <%= animal.weight %>
+            Weight: <%= animal.weight %>
           </p>
           <p class="animal_information">
-            <%= animal.food %>
+            Food: <%= animal.food %>
           </p>
           <p class="animal_information">
-            <%= animal.found %>
+            Found: <%= animal.found %>
           </p>
         </div>
       </div>
@@ -28,7 +28,7 @@
         <h2 class="animal_title">
           <%= animal.name %>
         </h2>
-        <p class="animal_information">
+        <p class="animal_group_name">
           <%= animal.group %>
         </p>
         <p class="animal_information">
