--- a/views/pages/animal-page.ejs
+++ b/views/pages/animal-page.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animals</title>
-</head>
-
+<%- include("../partials/head.ejs")%>
+<%- include("../partials/menu.ejs")%>
 <body>
   <% if (locals.animalsList) { %>
     <% if (pageType==="animals" ) { %>
