--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/head.ejs")%>
  <%- include("../partials/menu.ejs")%>
 <body>
-
+  <%- include("../partials/hero.ejs")%>
 </body>
 
 </html>
