--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -51,3 +51,44 @@
 .animal_list:hover {
   text-decoration: underline;
 }
+
+.container {
+  flex-grow: 1;
+  display: flex;
+}
+
+.sidebar {
+  flex: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--secondary-color-yellow);
+}
+
+.sidebar-animals {
+  text-align: center;
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-animals li {
+  list-style: none;
+}
+
+.sidebar-animals-button {
+  display: inline-block;
+  padding: 12px 18px;
+  background-color: var(--secondary-color-yellow);
+  color: var(--text-color-white);
+  font-size: 1.4rem;
+  border-radius: 24px;
+  cursor: pointer;
+  margin: 16px;
+  text-decoration: none;
+}
+
+.sidebar-animals-button:hover {
+  transform: scale(1.07);
+  background-color: rgba(255, 255, 255, 0.4);
+}
