--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -58,7 +58,7 @@
 }
 
 .sidebar {
-  flex: 20%;
+  flex: 0 0 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -101,30 +101,7 @@
   padding: 10px;
   flex-wrap: wrap;
   justify-content: space-between;
-  color: var(--text-color-white)
-}
-
-.footer_copyright {
-  font-size: 24px;
-  padding-top: 10px;
-}
-
-.footer_wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  justify-content: end;
-}
-
-.footer {
-  background-color: var(--accent-color-green);
-  width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  color: var(--text-color-white)
+  color: var(--text-color-white);
 }
 
 .footer_copyright {
@@ -140,12 +117,20 @@
 }
 
 .animal_container {
+  flex: 1;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
   padding: 16px;
   gap: 16px;
   background-color: var(--background-color);
+}
+
+.animal-item {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
 }
 
 .animal_card {
@@ -159,7 +144,7 @@
 }
 
 .animal_text {
-  flex-direction: row;
+  flex-direction: column;
   width: 40%;
 }
 
@@ -171,10 +156,12 @@
   color: var(--primary-color-orange);
 }
 
-.animal_title {}
+.animal_title {
+}
 
 .animal_information {
   font-weight: lighter;
 }
 
-.animal_image {}
+.animal_image {
+}
