--- a/views/partials/animals.ejs
+++ b/views/partials/animals.ejs
@@ -1,8 +1,9 @@
 <link rel="stylesheet" href="/styles/styles.css">
 
 <% if (animalsList) { %>
-  <% animalsList.forEach(animal=> { %>
     <div class="animal_container">
+  <% animalsList.forEach(animal=> { %>
+    <div class="animal-item">
       <div class="animal_card">
         <img class="animal_image" src=/images/<%=animal.image %> alt="animal" height="200px" width="200px" />
         <div class="animal_box">
@@ -35,7 +36,7 @@
           <%= animal.description %>
         </p>
       </div>
-    </div>
-
+      </div>
     <% }) %>
+        </div>
       <% } %>
