--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -53,25 +53,23 @@
 }
 
 .container {
+  flex-grow: 1;
   display: flex;
-  min-height: 100vh;
 }
 
 .sidebar {
   flex: 0 0 250px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   background-color: var(--secondary-color-yellow);
-  padding-top: 20px;
 }
 
 .sidebar-animals {
   text-align: center;
   list-style: none;
   padding: 0;
-  width: 100%;
 }
 
 .sidebar-animals li {
@@ -103,7 +101,7 @@
   padding: 10px;
   flex-wrap: wrap;
   justify-content: space-between;
-  color: var(--text-color-white)
+  color: var(--text-color-white);
 }
 
 .footer_copyright {
@@ -119,33 +117,34 @@
 }
 
 .animal_container {
+  flex: 1;
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: column;
   padding: 16px;
   gap: 16px;
   background-color: var(--background-color);
-}
-
-.animal_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--primary-color-orange);
-  border-radius: 20px;
-  color: var(--text-color-white);
 }
 
 .animal-item {
   display: flex;
   flex-direction: row;
   gap: 16px;
-  width: 100%;
+}
+
+.animal_card {
+  display: flex;
+  flex-direction: column;
+  width: min-content;
+  align-items: center;
+  background-color: var(--primary-color-orange);
+  border-radius: 20px;
+  color: var(--text-color-white);
 }
 
 .animal_text {
-  flex-direction: row;
+  flex-direction: column;
   width: 40%;
 }
 
@@ -157,10 +156,12 @@
   color: var(--primary-color-orange);
 }
 
-.animal_title {}
+.animal_title {
+}
 
 .animal_information {
   font-weight: lighter;
 }
 
-.animal_image {}
+.animal_image {
+}
