Added see all animals button on sidebar

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,9 +1,10 @@
 <div class="sidebar">
+  <a href="?" class="sidebar-animals-button">Show all animals</a>
   <ul class="sidebar-animals">
     <% if(animalsList) { %>
       <% animalsList.forEach(animal => { %>
         <li>
-          <a href="#"ç class="sidebar-animals-button">
+          <a href="?name=<%= animal.name %>"class="sidebar-animals-button">
             <%= animal.name %>
           </a>
         </li>
