--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,3 +1,4 @@
 <%- include("../partials/head.ejs")%>
   <%- include("../partials/menu.ejs")%>
   <%- include("../partials/hero.ejs")%>
+  <%- include("../partials/home-animals.ejs") %>
