--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,3 +2,5 @@
   <%- include("../partials/menu.ejs")%>
   <%- include("../partials/hero.ejs")%>
   <%- include("../partials/home-animals.ejs") %>
+  <%- include('../partials/footer')%>
+
