--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -168,41 +168,48 @@
 }
 
 .hero {
+    height: calc(100vh - 90px);
+    display: flex;
+    padding: 5vh 0 0 0;
+    justify-content: space-between;  
+    flex-direction: column;  
     background-color: var(--secondary-color-yellow);
 }
 .hero_parent {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 8px;
+    display: flex;
+    align-self: center;
+    align-items: center;
+    flex-direction: row;
+    max-width: 1087px;
 }
 
     
 .hero_title {
-    grid-column: span 2 / span 2;
-    grid-row: span 2 / span 2;
+    color: var(--text-color-white);
+    font-size: 120px;
 }
 
 .hero_subtitle {
-    grid-column: span 2 / span 2;
-    grid-row: span 2 / span 2;
-    grid-column-start: 1;
-    grid-row-start: 3;
 }
 
 .hero_btn {
-    grid-column: span 2 / span 2;
-    grid-column-start: 1;
-    grid-row-start: 5;
 }
 
 .hero_img {
-    grid-column: span 2 / span 2;
-    grid-row: span 5 / span 5;
-    grid-column-start: 3;
-    grid-row-start: 1;
-    background-color: var(--text-color-white);
-    border-radius: 100%;
+    width: 100%;
+    height: 499px;
+    background-image: url('../images/hero-image.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.hero_border {
+    background-image: url('../images/hero-border.png');
+    width: 100%;
+    height: 150px;
+    background-size:auto;
+    background-repeat: repeat-x;
+    background-position: end;
 }
 
 .mammal {
