--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -1,33 +1,15 @@
 <section class="hero">
-  <div class="hero_parent" background-color="yellow">
-    <div class="hero_title">
-      <h1 class="hero-title">Zoo Express</h1>
+  <div class="hero_parent">
+    <div class="child">
+      <div class="hero_title">
+        <h2 class="hero-title">Welcome to Zoo Express</h2>
+      </div>
+      <div class="hero_subtitle">
+        <h4 class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</h4>
+      </div>
+      <a href="/about" class="hero_btn">Our Mission</a>
     </div>
-    <div class="hero_subtitle">
-      <h4 class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</h4>
-    </div>
-    <div class="hero_btn">
-      <a href="/about" class="btn btn-primary">Our Mission</a>
-    </div>    
-    <div class="hero_img">
-      <img src="" alt="hero image" class="hero-image">
-    </div>                
+    <div class="child hero_img" alt="hero image"></div>       
   </div>
-  <div class="hero_border">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="938.319" height="100.178" viewBox="0 0 1938.319 200.178">
-          <defs>
-            <filter id="Path_103" x="0" y="0" width="1938.319" height="200.178" filterUnits="userSpaceOnUse">
-              <feOffset dy="-4" input="SourceAlpha"/>
-              <feGaussianBlur stdDeviation="3" result="blur"/>
-              <feFlood flood-opacity="0.082"/>
-              <feComposite operator="in" in2="blur"/>
-              <feComposite in="SourceGraphic"/>
-            </filter>
-          </defs>
-          <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#Path_103)">
-            <path id="Path_103-2" data-name="Path 103" d="M7.171,983.392c84.316,5.189,82.539-86.658,235.182-92.335s188.829,75.61,453.759,71.639,361.756-82.845,565.358-82.613S1565,933.909,1696.834,962.7s230.371,18.617,230.475,20.694,0,78.87,0,78.87l-1920.273,0Z" transform="translate(1.96 -867.08)" fill="#faf9f5"/>
-          </g>
-    </svg>
-        
-  </div>
+  <div class="hero_border"></div>
 </section>
