--- a/views/partials/infocard.ejs
+++ b/views/partials/infocard.ejs
@@ -1,6 +1,6 @@
 <% animalsInfo.forEach(animal => { %>
     <div class="infocard <%= animal.group %>">
-        <a href="/<%= animal.group %>s">
+        <a href="/<%= animal.group %>s?name=<%= animal.name %>">
             <img src="/images/<%= animal.image %>" alt="<%= animal.name %>">
         </a>
         <h2 class="animal_name"><%= animal.name %></h2>
