--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -400,6 +400,23 @@ a {
   font-size: 1rem;
 }
 
+.mission-section {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.mission-header {
+  font-size: 2.5rem;
+  color: var(--primary-color-orange);
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.mission-text {
+  font-size: 1rem;
+  color: (var(--text-color-black));
+}
+
 @media screen and (max-width: 768px) {
 
     .hero {
